@@ -4,6 +4,7 @@ Changelog
 2022-06-01
 - Add support for CastOnStrike imperils
 - Fixed display issues with non-base skill wield requirements
+- Fix crit damage calculation when using armor cleaving weapons
 
 2022-05-29
 - Fix non-crit damage calculation when applying imperil
